feat: Elite Stars Integration (Canopus, Arcturus, Rigil, Vega, Capella) & Deep Cleanup

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -644,22 +644,68 @@
              "history": { "verdict": "مخلوق." },
             "monotheism_message": "الشكل الهندسي المتقن لهذا الكويكب دليل على دقة الصنع الإلهي."
         },
-        "halley": {
-            "name": "مذنب هالي (Halley's Comet)",
-            "historical_name": "المذنب الأشهر",
+        "canopus": {
+            "name": "سُهيل (Canopus)",
+            "historical_name": "سهيل اليماني",
             "science": {
-                "type": "مذنب دوري",
-                "distance": "متغير (٣٥ وحدة في الأوج)",
-                "size": "١٥ × ٨ كم",
-                "orbital_period": "٧٥-٧٦ سنة"
+                "type": "عملاق ساطع (A9)",
+                "distance": "٣١٠ سنوات ضوئية",
+                "size": "٧١ مرة قطر الشمس",
+                "brightness": "ثاني ألمع نجم في السماء"
             },
-            "description": "أشهر مذنب في التاريخ، يعود لرؤية الأرض كل ٧٦ عاماً. رصده المسلمون وسجلوه في تاريخهم بدقة.",
-            "history": {
-                "worshipped_by": "نذير شؤم",
-                "reason": "ارتبط ظهوره بسقوط ممالك",
-                "verdict": "خرافة. هو يجري بميقات معلوم."
+            "description": "نجم العرب الأول. بشروقه تنكسر حدة الحرارة ويبدأ موسم اعتدال الجو. له مكانة خاصة في الثقافة العربية وتسمية الأولاد.",
+            "history": { "verdict": "آية كونية وميقات." },
+            "monotheism_message": "ربط العرب مواسمهم بنجم سهيل دليل على تسخير الله للكواكب علامات يهتدي بها البشر."
+        },
+        "arcturus": {
+            "name": "السماك الرامح (Arcturus)",
+            "historical_name": "حارس الدب",
+            "science": {
+                "type": "عملاق برتقالي (K0III)",
+                "distance": "٣٦.٧ سنة ضوئية",
+                "size": "٢٥ مرة قطر الشمس",
+                "brightness": "رابع ألمع نجم"
             },
-            "monotheism_message": "عودته الدقيقة كل ٧٦ عاماً كالساعة الكونية، تشهد بانتظام أمر الله في خلقه."
+            "description": "عملاق برتقالي ضخم، أقدم من شمسنا بمليارات السنين. يتحرك بسرعة هائلة عبر المجرة.",
+            "history": { "verdict": "مخلوق عظيم." },
+            "monotheism_message": "لونه البرتقالي وعمره السحيق يذكرنا بأن الله هو الوارث، الباقي بعد فناء كل شيء."
+        },
+        "rigil": {
+            "name": "رجل القنطور (Alpha Centauri)",
+            "historical_name": "الرجل",
+            "science": {
+                "type": "نظام ثلاثي الأبعاد",
+                "distance": "٤.٣٧ سنة ضوئية (الأقرب للشمس)",
+                "size": "مشابه للشمس"
+            },
+            "description": "أقرب نظام نجمي للأرض. رحلتنا إليه ستكون الخطوة الأولى للبشرية خارج النظام الشمسي.",
+            "history": { "verdict": "جارنا الكوني." },
+            "monotheism_message": "قربه منا رغم بعده الهائل (٤ سنوات ضوئية) يظهر سعة ملكوت الله الذي لا تدركه الأبصار."
+        },
+        "vega": {
+            "name": "النسر الواقع (Vega)",
+            "historical_name": "النسر",
+            "science": {
+                "type": "نجم أبيض مزرق (A0V)",
+                "distance": "٢٥ سنة ضوئية",
+                "size": "٢.٣ مرة قطر الشمس",
+                "brightness": "المرجع لقياس السطوع (Magnitude 0)"
+            },
+            "description": "نجم ساطع جداً ولونه أزرق ياقوتي. كان نجم الشمال قبل ١٢,٠٠٠ سنة وسيعود كذلك مستقبلاً.",
+            "history": { "verdict": "زينة السماء." },
+            "monotheism_message": "تبدل مكانه كنجم قطبي عبر القرون يثبت أن الدوام لله وحده، وأن الكون في حركة دائبة."
+        },
+        "capella": {
+            "name": "العيّوق (Capella)",
+            "historical_name": "العنزة",
+            "science": {
+                "type": "نظام نجمي رباعي",
+                "distance": "٤٢.٩ سنة ضوئية",
+                "size": "١٢ مرة قطر الشمس"
+            },
+            "description": "نجم ذهبي جميل، كان العرب يشبهونه بالعيّوق لأنه يعوق الثريا عن اللحاق به.",
+            "history": { "verdict": "مخلوق مسخر." },
+            "monotheism_message": "جمال لونه الذهبي وترتيبه كنظام رباعي آية في الإبداع الكوني."
         }
     }
 }
